@@ -1,10 +1,10 @@
 Package: RMOA
-Version: 1.0.2
+Version: 1.1.0
 Title: Connect R with MOA for Massive Online Analysis
 Authors@R: c(person("Jan", "Wijffels", role = c("aut", "cre"), email =
     "jwijffels@bnosac.be"), person("BNOSAC", role = "cph"))
 Description: Connect R with MOA (Massive Online Analysis -
-    <https://moa.cms.waikato.ac.nz>) to build classification models and
+    <https://moa.cms.waikato.ac.nz/>) to build classification models and
     regression models on streaming data or out-of-RAM data.
     Also streaming recommendation models are made available.
 Depends: RMOAjars (>= 1.0), rJava (>= 0.6-3), methods
@@ -17,8 +17,8 @@ URL: http://www.bnosac.be, https://github.com/jwijffels/RMOA,
         https://moa.cms.waikato.ac.nz/
 RoxygenNote: 7.1.1
 NeedsCompilation: no
-Packaged: 2021-09-23 21:43:04 UTC; Jan
+Packaged: 2022-07-17 20:39:47 UTC; jwijf
 Author: Jan Wijffels [aut, cre],
   BNOSAC [cph]
 Repository: CRAN
-Date/Publication: 2021-09-27 14:10:15 UTC
+Date/Publication: 2022-07-17 21:00:02 UTC
