@@ -1,23 +1,24 @@
-fade59fb40c3811ff6188fec5c3856b5 *DESCRIPTION
+a298ff5f5da040d910de2904b5fc5eed *DESCRIPTION
 e1c3aa64accbe4ef145672f7f89f1229 *NAMESPACE
-542244023240e8483187dd013cb0e16e *R/AAA.R
+e9609f89a05130783557a822fb9c0c47 *R/AAA.R
 6a639a5503a481780a1f03d0a75b260b *R/AllImports.R
-a443b48c5b7d9eda487fb5e8365ca49b *R/Classification.R
+225f89e0277230849a058892637addc8 *R/Classification.R
 76e810c37c4fb408368d1b90442c9ee4 *R/Datastreams.R
-edea563781bc54f70b3dcb00d3432208 *R/MOAinstances.R
-173b2f4942b1b5b1c9c2663d749a6b32 *R/MOAmodeloptions.R
-d208ce882144feffde7e2ba479d8a4e3 *R/Recommenders.R
-56f392542da617f601d3a62ab32c27b3 *R/Regression.R
+c1c1656a3febf866861c4573ee2c92b4 *R/MOAinstances.R
+932cadb91065e80e0ba3b060b9e672d9 *R/MOAmodeloptions.R
+e0282cba1ff623cd9663dbee9470912a *R/Recommenders.R
+309bbf0c1daab0bb3ecc8dd7f862d460 *R/Regression.R
 cb86a297181daaec834c3266b7b66a01 *R/knownmodels.R
-15f094b652f291b2d8ddb89d92feec21 *R/train.R
+eea22388e85a056683742fd51541d6ba *R/onLoad.R
+037a05ac2c01381107d050f0cc8d0bb2 *R/train.R
 2af5485065d4e017c1d67b786d9c8f0c *R/utils.R
-3f5cce5ffea5e7c9cffb19e401ba75d9 *build/vignette.rds
+a69f1d82d79395e5fdc5af8fcb6769aa *build/vignette.rds
 65a2dfbc09c3ad0a20e6a04b7ef49283 *inst/CITATION
-e507f1ccb998cdcd522f6d0d7379ceb6 *inst/NEWS
+12665f04e37f9022af164fafe05afe5f *inst/NEWS
 0bb60ba00180a0e8b83ce4cf657de9a1 *inst/TODO
 63c5b4974076b4eb9d333ecd83d60186 *inst/doc/packageShowCase.R
 c75d1815c5290c800cc0b7dfc1dd84d9 *inst/doc/packageShowCase.Rnw
-283d3396580b09a06762046d259e7796 *inst/doc/packageShowCase.pdf
+8b053703d542d3bf03a09046e2f09e1a *inst/doc/packageShowCase.pdf
 21bb36a76200130e9fed7c6593966caf *man/MOA_classification_activelearning.Rd
 2e212208b9fe225b1ced8731c55680a2 *man/MOA_classification_bayes.Rd
 f4948641d9737844bba72229b3ced131 *man/MOA_classification_ensemblelearning.Rd
