@@ -25,7 +25,7 @@ MOA_recommender <- function(model, control=NULL, ...){
   class(out) <- c(model, "MOA_recommender", "MOA_model")
   out$type <- model
   ## Create the model
-  out$moamodel <- .jnew(modelclass(out$type))  
+  out$moamodel <- .jnew(modelclass(out$type), class.loader=.rJava.class.loader)  
   ## Set MOA options
   if(inherits(control, "MOAmodelOptions")){
     if(control$model != out$type){
