@@ -1,3 +1,7 @@
+                CHANGES IN RMOAjars VERSION 1.1.0
+
+    o    The package now uses a package class loader for rJava available in R package RMOAjars
+    
                 CHANGES IN RMOA VERSION 1.0.2
 
     o    Fix summary.MOA_recommender for Java 17 as indicated in R CMD check on M1mac (removed toArray), which showed the following error
